# VSB_PG1

pg1_template_embree_vs2017/data/: 6887_allied_avenger.mtl  cornell_box2.mtl  geosphere.mtl
pg1_template_embree_vs2017/src/pg/: CMakeLists.txt
pg1_template_embree_vs2017/src/pg/pg1_embree/: SphericalBackground.cpp  SphericalBackground.h  background.cpp  camera.cpp  imgui.ini  material.cpp  material.h  objloader.cpp  pg1_embree.cpp  pg1_embree.vcxproj  pg1_embree.vcxproj.filters  raytracer.cpp  raytracer.h  simpleguidx11.cpp  structs.cpp  structs.h  texture.cpp  texture.h  triangle.cpp  triangle.h  tutorials.cpp  utils.cpp  utils.h  vector3.cpp  vector3.h
pg1_template_embree_vs2017/src/pg/pg1_embree/x64/Debug/: vc141.idb
pg1_template_embree_vs2017/src/pg/pg1_embree/x64/Debug/pg1_embree.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pg1_embree.lastbuildstate
pg1_template_embree_vs2017/src/pg/pg1_embree/x64/Release/pg1_embree.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pg1_embree.lastbuildstate  pg1_embree.write.1u.tlog
pg1_template_embree_vs2017/src/pg/x64/Debug/: pg1_embree.ilk
pg1_template_embree_vs2017/src/pg/x64/Release/: pg1_embree.ipdb
